
syntax = "proto3";
 package pb;

 option go_package = "github.com/franklynobleC/eventstreamTask/service"; 

service EventStore {
    
   
    // Get all events for the given aggregate and event
    rpc GetEvents(GetEventsRequest) returns (GetEventResponse) {}
  //    Get stream of events for the given event
    rpc GetEventsStream(GetEventsRequest) returns (stream Event) {}
  }
  
  message Event {
    string event_id = 1;
    string event_type = 2;
    string aggregate_type = 4;
    string stream = 6; 
  }
 
  
  message GetEventResponse {
    bool   success = 1;
    string error = 2;
  }
  
  message GetEventsRequest {
    string event_id = 1;
    string aggregate_id = 2;
  }
  
  // message GetEventsResponse }
  //   repeated Event events = 1;

  // }